--- a/ngAppointment/src/app/app.component.html
+++ b/ngAppointment/src/app/app.component.html
@@ -1,3 +1,8 @@
+
+<app-nav-bar></app-nav-bar>
 <div class="container">
-  <app-home></app-home>
+  <router-outlet></router-outlet>
 </div>
+
+<hr>
+<a href="indexStatic.html">Go to JavaScrip/AJAX fron-end</a>
